--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,6 +17,7 @@ pipeline
         {
             steps
             {
+                sh 'rm -rf Jenkins-Zero-To-Hero'
                 sh 'git clone https://github.com/BKV08/Jenkins-Zero-To-Hero.git'
                 sh 'mvn clen install'
 
