--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,6 +17,8 @@ pipeline
         {
             steps
             {
+                sh 'mkidr test_folder'
+                sh 'cd test_folder'
                 sh 'rm -rf Jenkins-Zero-To-Hero'
                 sh 'git clone https://github.com/BKV08/Jenkins-Zero-To-Hero.git'
                 
