--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,11 +13,25 @@ pipeline
             }
         }
 
+        stage('Check or Create Folder') {
+            steps {
+                script {
+                    def folder = "my_folder"
+                    if (fileExists(folder)) {
+                        echo "Folder '${folder}' exists. Proceeding to next step."
+                    } else {
+                        echo "Folder '${folder}' does not exist. Creating..."
+                        sh "mkdir -p ${folder}"
+                    }
+                }
+            }
+        }
+
+
         stage('clone')
         {
             steps
             {
-                sh 'mkidr test_folder'
                 sh 'cd test_folder'
                 sh 'rm -rf Jenkins-Zero-To-Hero'
                 sh 'git clone https://github.com/BKV08/Jenkins-Zero-To-Hero.git'
