--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,7 +32,7 @@ pipeline
         {
             steps
             {
-                sh 'cd test_folder'
+                sh 'cd my_folder'
                 sh 'rm -rf Jenkins-Zero-To-Hero'
                 sh 'git clone https://github.com/BKV08/Jenkins-Zero-To-Hero.git'
                 
